# ECE346-jrc

Host_Setup/: robotstack.md
ROS_Core/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ROS_Core/install/include/racecar_interface/: Reset.h  ResetObstacle.h  ResetObstacleRequest.h  ResetObstacleResponse.h  ResetRequest.h  ResetResponse.h  simConfig.h
ROS_Core/install/include/racecar_learning/: controllerConfig.h
ROS_Core/install/include/racecar_msgs/: OdometryArray.h  ServoMsg.h  SetArray.h
ROS_Core/install/share/lab0/cmake/: lab0Config.cmake
ROS_Core/install/share/racecar_interface/cmake/: racecar_interface-msg-extras.cmake  racecar_interface-msg-paths.cmake  racecar_interfaceConfig.cmake
ROS_Core/install/share/racecar_learning/cmake/: racecar_learningConfig.cmake
ROS_Core/install/share/racecar_msgs/: package.xml
ROS_Core/install/share/racecar_msgs/cmake/: racecar_msgs-msg-extras.cmake  racecar_msgs-msg-paths.cmake  racecar_msgsConfig.cmake
ROS_Core/install/share/racecar_msgs/msg/: OdometryArray.msg  SetArray.msg
ROS_Core/install/share/roseus/ros/racecar_interface/: manifest.l
ROS_Core/install/share/roseus/ros/racecar_msgs/: manifest.l
ROS_Core/src/Labs/Lab0/scripts/controller/: pure_pursuit.py
ROS_Core/src/Labs/Lab1/configs/: lab2_task2.yaml
ROS_Core/src/Labs/Lab1/launch/: ilqr_truck.launch  lab2_truck.launch
ROS_Core/src/Labs/Lab1/scripts/: task1.ipynb  traj_planner.py
ROS_Core/src/Labs/Lab2/scripts/: dyn_obstacle_node.py  frs.py
ROS_Core/src/Labs/Lab3/: pomdp.ipynb  visualizer.py
(+35 files in other folders)
