<package format="2">
  <name>racecar_msgs</name>
  <version>0.0.1</version>
  <description>
  Custom Messages for Princeton RaceCar
  </description>
  <maintainer email="zixuz@princeton.edu">Zixu Zhang</maintainer>
  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

</package>
